--- a/wiki/EclipseCodeSearch.wiki
+++ b/wiki/EclipseCodeSearch.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Eclipse CodeSearch is a nifty plugin for eclipse that lets you search through existing open source code using Google CodeSearch. If you don't know what's Google CodeSearch go to codesearch.google.com and type "System.out.println".
+Eclipse CodeSearch is a nifty plugin for eclipse that lets you search through existing open source code using Google CodeSearch. If you don't know what's Google CodeSearch go to http://codesearch.google.com and type "System.out.println".
 
 
 = Installation Instructions =
@@ -23,7 +23,6 @@ Just type a function name or any piece of code into the search bar and pres Ente
   * issuing the search from your editor
   * opening the result in a separate window
   * automatically performing the search for the word under the cursor
-
 
 
 
